--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
     "preview": "vite preview",
-
     "dev:front": "vite",
     "dev:back": "powershell -NoProfile -Command \"& .\\venv\\Scripts\\python.exe .\\manage.py runserver 8000\"",
     "dev:all": "concurrently -n FRONT,BACK -c auto \"npm run dev:front\" \"npm run dev:back\""
@@ -43,6 +42,8 @@
     "@radix-ui/react-toggle": "^1.1.9",
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@stripe/react-stripe-js": "^5.3.0",
+    "@stripe/stripe-js": "^8.2.0",
     "@tanstack/react-query": "^5.83.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
